Update page list

--- a/src/page-list.pug
+++ b/src/page-list.pug
@@ -45,8 +45,8 @@ block content
 			li.list-arrow__elem
 				a(href="career-item.html", target="_blank") Карточка вакансии // + моб версия
 			li.list-arrow__elem
-				a(href="department.html", target="_blank") Отдел службы качества
+				a(href="department.html", target="_blank") Отдел службы качества // + моб версия
 			li.list-arrow__elem
-				a(href="protection.html", target="_blank") Охрана труда
+				a(href="protection.html", target="_blank") Охрана труда // + моб версия
 			li.list-arrow__elem
 				a(href="terminals.html", target="_blank") Наши терминалы // + моб версия
