--- a/src/scss/components/sections/_section-contacts.scss
+++ b/src/scss/components/sections/_section-contacts.scss
@@ -151,9 +151,16 @@
 	}
 
 	&__form-submit-box {
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+
+		@media (min-width: $breakpoint-laptop) {
+			flex-direction: row;
+		}
+
 		.section-contacts--job & {
-			display: flex;
-			align-items: center;
+			flex-direction: row;
 			text-align: unset;
 		}
 	}
@@ -276,5 +283,27 @@
 	&__form-reset {
 		width: 100%;
 		max-width: 246px;
+	}
+
+	&__error-message {
+		display: none;
+		font-family: $font-secondary;
+		font-size: 18px;
+		line-height: 18px;
+		color: $color-red;
+
+		@media (min-width: $breakpoint-laptop) {
+			margin-left: 33px;
+		}
+
+		.section-contacts__form--error & {
+			display: block;
+		}
+
+		.section-contacts--job & {
+			@media (min-width: $breakpoint-laptop) {
+				margin-left: 0;
+			}
+		}
 	}
 }
