--- a/css/main.css
+++ b/css/main.css
@@ -2673,15 +2673,20 @@ a {
     border-color: #e2e2e2;
     border-radius: 40px; }
   .form-control::-webkit-input-placeholder {
-    color: #000; }
+    color: #000;
+    opacity: 1; }
   .form-control::-moz-placeholder {
-    color: #000; }
+    color: #000;
+    opacity: 1; }
   .form-control:-ms-input-placeholder {
-    color: #000; }
+    color: #000;
+    opacity: 1; }
   .form-control::-ms-input-placeholder {
-    color: #000; }
+    color: #000;
+    opacity: 1; }
   .form-control::placeholder {
-    color: #000; }
+    color: #000;
+    opacity: 1; }
   .form-control:focus {
     outline: none;
     border-color: #004996; }
@@ -2689,6 +2694,19 @@ a {
     resize: none; }
     .form-control--textarea.form-control--round {
       padding: 28px 44px; }
+  .form-control--error {
+    border-color: #E10000 !important;
+    color: #E10000 !important; }
+    .form-control--error::-webkit-input-placeholder {
+      color: #E10000 !important; }
+    .form-control--error::-moz-placeholder {
+      color: #E10000 !important; }
+    .form-control--error:-ms-input-placeholder {
+      color: #E10000 !important; }
+    .form-control--error::-ms-input-placeholder {
+      color: #E10000 !important; }
+    .form-control--error::placeholder {
+      color: #E10000 !important; }
 
 .news-card {
   position: relative;
@@ -4576,14 +4594,29 @@ a {
     margin-bottom: 23px; }
   .section-contacts__textarea-box {
     height: 100%; }
-  .section-contacts--job .section-contacts__form-submit-box {
+  .section-contacts__form-submit-box {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    text-align: unset; }
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+    @media (min-width: 992px) {
+      .section-contacts__form-submit-box {
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row; } }
+    .section-contacts--job .section-contacts__form-submit-box {
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      text-align: unset; }
   .section-contacts__form-submit {
     width: 100%; }
     @media (min-width: 992px) {
@@ -4670,6 +4703,20 @@ a {
   .section-contacts__form-reset {
     width: 100%;
     max-width: 246px; }
+  .section-contacts__error-message {
+    display: none;
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 18px;
+    line-height: 18px;
+    color: #E10000; }
+    @media (min-width: 992px) {
+      .section-contacts__error-message {
+        margin-left: 33px; } }
+    .section-contacts__form--error .section-contacts__error-message {
+      display: block; }
+    @media (min-width: 992px) {
+      .section-contacts--job .section-contacts__error-message {
+        margin-left: 0; } }
 
 .section-news {
   padding-top: 52px;
