--- a/src/about.pug
+++ b/src/about.pug
@@ -222,30 +222,86 @@ block content
 				// Content
 				.section-about__tab-content.section-about__tab-content--no-top-padding.tabs__content#content3
 					.section-about__timeline.section-about-timeline
-						.section-about-timeline__box.container.show-more
+						.section-about-timeline__box.show-more
+							img.section-about-timeline__road(src="images/section-about/timeline-road.svg", alt)
 							.section-about-timeline__marker.section-about-timeline__marker--red.section-about-timeline__marker--n1
-								img.section-about-timeline__img(src="images/section-about/photo.jpg", alt)
 								p.section-about-timeline__value 2004
-								p.section-about-timeline__text Образование компании
+								p.section-about-timeline__text.section-about-timeline__text--line-top Образование компании
 									br
 									|Major Terminal
+								img.section-about-timeline__img(src="images/section-about/photo.jpg", alt)
 							.section-about-timeline__marker.section-about-timeline__marker--n2
-								p.section-about-timeline__value 2007
-								p.section-about-timeline__text Открытие склада “М9”
+								p.section-about-timeline__value 2006
+								p.section-about-timeline__text Запуск работ по индустриям
 									br
-									|(МО д.Михалково)
+									|Telecom и Fashion (г. Москва)
 							.section-about-timeline__marker.section-about-timeline__marker--n3
-								p.section-about-timeline__value 2008
-								p.section-about-timeline__text Открытие склада “Истра”
+								p.section-about-timeline__value 2007
+								p.section-about-timeline__text.section-about-timeline__text--line-top Открытие склада "М9"
 									br
-									|(г.Истра) и запуск сети региональных
+									|(МО, д. Михалково).
 									br
-									|складов
+									br
+									|Запуск работ по индустрии
+									br
+									|POSM (г. Москва)
 							.section-about-timeline__marker.section-about-timeline__marker--n4.show-more__mobile-hide-flex
-								p.section-about-timeline__value 2011
-								p.section-about-timeline__text Открытие склада
+								p.section-about-timeline__value 2008
+								p.section-about-timeline__text Открытие склада "Истра" (г. Истра).
 									br
-									|“Парнас” (СПБ)
+									|Запуск сети региональных складов
+							.section-about-timeline__marker.section-about-timeline__marker--n5.show-more__mobile-hide-flex
+								p.section-about-timeline__value 2009
+								p.section-about-timeline__text.section-about-timeline__text--line-top Запуск работ по индустрии
+									br
+									|Helthcare (г. Москва)
+							.section-about-timeline__marker.section-about-timeline__marker--n6.show-more__mobile-hide-flex
+								p.section-about-timeline__value 2011
+								p.section-about-timeline__text Открытие склада "Парнас" (г. Санкт-Петербург)
+									br
+									| Запуск работ по индустрии Automotive
+							.section-about-timeline__marker.section-about-timeline__marker--n7.show-more__mobile-hide-flex
+								p.section-about-timeline__value 2015
+								p.section-about-timeline__text.section-about-timeline__text--line-top Запуск проекта производственной
+									br
+									| логистики Shell (г. Торжок)
+							.section-about-timeline__marker.section-about-timeline__marker--n8.show-more__mobile-hide-flex
+								p.section-about-timeline__value 2016
+								p.section-about-timeline__text Введение в эксплуатацию
+									br
+									|первого собственного склада
+									br
+									|ПС1 (МО, с. Павловская Слобода)
+							.section-about-timeline__marker.section-about-timeline__marker--n9.show-more__mobile-hide-flex
+								p.section-about-timeline__value 2017
+								p.section-about-timeline__text.section-about-timeline__text--line-top Запуск проекта производственной
+									br
+									|логистики Continental (г. Калуга).
+									br
+									br
+									|Запуск проекта IPO Nissan, г. Санкт-Петербург
+									br
+									br
+									|Запуск работы по индустрии FMCG (г. Москва)
+							.section-about-timeline__marker.section-about-timeline__marker--n10.show-more__mobile-hide-flex
+								p.section-about-timeline__value 2018
+								p.section-about-timeline__text Введение в эксплуатацию второго
+									br
+									|собственного склада ПС2
+									br
+									|(МО, с. Павловская Слобода).
+							.section-about-timeline__marker.section-about-timeline__marker--n11.show-more__mobile-hide-flex
+								p.section-about-timeline__value 2019
+								p.section-about-timeline__text.section-about-timeline__text--line-top Запуск проекта Икеа ECOM
+									br
+									|(г. Санкт-Петербург)
+							.section-about-timeline__marker.section-about-timeline__marker--n12.show-more__mobile-hide-flex
+								p.section-about-timeline__value 2022
+								p.section-about-timeline__text.section-about-timeline__text--line-top Введение в эксплуатацию третьего
+									br
+									|собственного склада ПС3
+									br
+									|(МО, с. Павловская Слобода)
 							button.button.button--outline-blue.button--md.show-more__button Показать еще
 				// Content
 				.section-about__tab-content.tabs__content#content2
