--- a/src/scss/components/sections/_section-partner.scss
+++ b/src/scss/components/sections/_section-partner.scss
@@ -69,6 +69,27 @@
 				}
 			}
 		}
+
+		&-temperature {
+			&-description {
+
+				font-family: $font-secondary;
+				font-weight: 400;
+				font-size: 24px;
+				line-height: 50px;
+				margin-bottom: 35px;
+				color: #070707;
+			}
+
+			&-title {
+				font-family: $font-secondary;
+				font-weight: 700;
+				font-size: 100px;
+				line-height: 100px;
+				margin-bottom: 60px;
+				color: #004996;
+			}
+		}
 	}
 
 	&__title {
@@ -221,11 +242,14 @@
 
 	&__list-arrow-block {
 		margin-bottom: 42px;
+		display: none;
 
 		@media (min-width: $breakpoint-desktop) {
-			display: flex;
 			column-gap: 57px;
 			flex-direction: row;
+		}
+		&.active {
+			display: flex;
 		}
 	}
 
