Add events to dropdown

--- a/src/case-list.pug
+++ b/src/case-list.pug
@@ -20,6 +20,7 @@ block content
 			p.section-case-list__description.section-case-list__description--mobile Всего найдено: 145
 			.section-case-list__dropdown-row
 				.dropdown.dropdown--gray-border.dropdown--multi-select.section-case-list__dropdown
+					input.dropdown__multi-input(type="text")
 					.dropdown__value-box
 						.dropdown__value Индустрии
 							span.dropdown__value-counter 0
