--- a/css/main.css
+++ b/css/main.css
@@ -1676,6 +1676,8 @@ a {
       background-color: #004996;
       -webkit-box-shadow: inset 0 0 0 4px #fff;
               box-shadow: inset 0 0 0 4px #fff; }
+  .dropdown__multi-input {
+    display: none; }
 
 .button {
   display: -webkit-inline-box;
@@ -4361,6 +4363,20 @@ a {
     @media (min-width: 1200px) {
       .section-partner__content--with-lists .section-partner__col--img {
         max-width: 30%; } }
+    .section-partner__col-temperature-description {
+      font-family: "Roboto Condensed", sans-serif;
+      font-weight: 400;
+      font-size: 24px;
+      line-height: 50px;
+      margin-bottom: 35px;
+      color: #070707; }
+    .section-partner__col-temperature-title {
+      font-family: "Roboto Condensed", sans-serif;
+      font-weight: 700;
+      font-size: 100px;
+      line-height: 100px;
+      margin-bottom: 60px;
+      color: #004996; }
   .section-partner__title {
     width: 100%;
     max-width: 830px;
@@ -4488,12 +4504,10 @@ a {
         .section-partner--bg-blue .section-partner__link:hover::after, .section-partner--bg-blue .section-partner__link--active::after {
           max-width: 70%; }
   .section-partner__list-arrow-block {
-    margin-bottom: 42px; }
+    margin-bottom: 42px;
+    display: none; }
     @media (min-width: 1200px) {
       .section-partner__list-arrow-block {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
         -webkit-column-gap: 57px;
            -moz-column-gap: 57px;
                 column-gap: 57px;
@@ -4501,6 +4515,10 @@ a {
         -webkit-box-direction: normal;
             -ms-flex-direction: row;
                 flex-direction: row; } }
+    .section-partner__list-arrow-block.active {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; }
   @media (min-width: 1200px) {
     .section-partner__row {
       display: -webkit-box;
