fix color simple card

--- a/src/scss/components/blocks/_simple-card.scss
+++ b/src/scss/components/blocks/_simple-card.scss
@@ -5,7 +5,7 @@
 	align-items: center;
 	border-radius: 25px;
 	overflow: hidden;
-	color: $color-white;
+	color: $color-blue;
 	padding: 20px 22px;
 
 	@media (min-width: $breakpoint-desktop) {
