--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -10,6 +10,13 @@
 	overflow: hidden !important;
 }
 
+.tabs2__content {
+	display: none;
+	&.active {
+		display: block;
+	}
+}
+
 .hide-desktop {
 	@media (min-width: $breakpoint-desktop) {
 		display: none !important;
