--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -12,10 +12,16 @@
 
 .tabs2__content {
 	display: none;
+
 	&.active {
 		display: block;
 	}
+
+	&-height {
+		margin-bottom: 42px;
+	}
 }
+
 
 .hide-desktop {
 	@media (min-width: $breakpoint-desktop) {
