--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -61,3 +61,7 @@
 @import "sections/section-service-range";
 @import "sections/section-success";
 @import "sections/section-icon-list";
+@import "sections/webinar-card";
+@import "sections/webinar-list";
+@import "sections/event-list";
+@import "sections/webinar";
