Add new contacts section

--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -34,6 +34,7 @@
 @import "sections/section-slider-terminal";
 @import "sections/section-partner";
 @import "sections/section-contacts";
+@import "sections/section-contacts-white";
 @import "sections/section-news";
 @import "sections/section-industries";
 @import "sections/section-invite";
