--- a/src/page-list.pug
+++ b/src/page-list.pug
@@ -50,3 +50,7 @@ block content
 				a(href="protection.html", target="_blank") Охрана труда // + моб версия
 			li.list-arrow__elem
 				a(href="terminals.html", target="_blank") Наши терминалы // + моб версия
+			li.list-arrow__elem
+				a(href="webinars.html", target="_blank") Вебинары // + моб версия
+			li.list-arrow__elem
+				a(href="webinar.html", target="_blank") Вебинар // + моб версия
