--- a/src/webinars.pug
+++ b/src/webinars.pug
@@ -10,6 +10,7 @@ append vars
 		link.icon = "favicons/favicon.ico"
 		link.icon16x16 = "favicons/favicon-16x16.png"
 		link.icon32x32 = "favicons/favicon-32x32.png"
+		showContactsWhite = true
 
 block content
 	// Section Webinar list
