Add webinar 2 page

--- a/src/page-list.pug
+++ b/src/page-list.pug
@@ -54,3 +54,5 @@ block content
 				a(href="webinars.html", target="_blank") Вебинары // + моб версия
 			li.list-arrow__elem
 				a(href="webinar.html", target="_blank") Вебинар // + моб версия
+			li.list-arrow__elem
+				a(href="webinar2.html", target="_blank") Вебинар 2 // + моб версия
