--- a/src/scss/components/sections/_webinar.scss
+++ b/src/scss/components/sections/_webinar.scss
@@ -195,4 +195,34 @@
 
 	&__event-item {
 	}
+
+	&__video-wrapper {
+		position: relative;
+		width: 100%;
+		margin: 24px 0 48px;
+		border-radius: 40px;
+		overflow: hidden;
+
+		&::before {
+			display: block;
+			padding-top: 63%;
+			content: "";
+		}
+
+		@media (min-width: $breakpoint-desktop) {
+			margin: 80px 0;
+			&::before {
+				padding-top: 55%;
+			}
+		}
+	}
+
+	&__video {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100% !important;
+		height: 100% !important;
+		object-fit: cover;
+	}
 }
