--- a/src/service.pug
+++ b/src/service.pug
@@ -56,6 +56,7 @@ block content
 				p.links-row__link Комплектация и упаковка FBS заказов
 				p.links-row__link Доставка
 				p.links-row__link Подготовка товара к отгрузке на маркетплейсы
+			p.section-service-range__text Политика конфиденциальности персональных данных г. Москва «01» июня 2017 г. Настоящая Политика конфиденциальности персональных данных (далее – Политика конфиденциальности) действует в отношении всей информации, которую Сайт транспортно-логистической группы компаний Major, расположенный на доменном имени www.mjr.ru, может получить о Пользователе во время его использования.
 		// Section Partner
 		.section-partner.section-partner--type2.section-partner--bg-blue.container
 			.section-partner__box
