Remove show more

--- a/src/career.pug
+++ b/src/career.pug
@@ -54,7 +54,7 @@ block content
 	// Section Vacancy
 	section.section-vacancy.container
 		p.section-vacancy__subtitle Найдено вакансий: 225
-		.section-vacancy__grid.show-more
+		.section-vacancy__grid
 			// Vacancy
 			a.section-vacancy__item(href="#")
 				.section-vacancy__item-row
@@ -86,7 +86,7 @@ block content
 					p.section-vacancy__item-title Менеджер по рекламациям
 					span.section-vacancy__item-button Подробнее
 			// Vacancy
-			a.section-vacancy__item.show-more__mobile-hide(href="#")
+			a.section-vacancy__item(href="#")
 				.section-vacancy__item-row
 					p.section-vacancy__item-city
 						+svg("map-marker-small", true)(class="section-vacancy__item-city-marker")
@@ -96,7 +96,7 @@ block content
 					p.section-vacancy__item-title Менеджер по рекламациям
 					span.section-vacancy__item-button Подробнее
 			// Vacancy
-			a.section-vacancy__item.show-more__mobile-hide(href="#")
+			a.section-vacancy__item(href="#")
 				.section-vacancy__item-row
 					p.section-vacancy__item-city
 						+svg("map-marker-small", true)(class="section-vacancy__item-city-marker")
@@ -106,7 +106,7 @@ block content
 					p.section-vacancy__item-title Менеджер по рекламациям
 					span.section-vacancy__item-button Подробнее
 			// Vacancy
-			a.section-vacancy__item.show-more__mobile-hide(href="#")
+			a.section-vacancy__item(href="#")
 				.section-vacancy__item-row
 					p.section-vacancy__item-city
 						+svg("map-marker-small", true)(class="section-vacancy__item-city-marker")
@@ -116,7 +116,7 @@ block content
 					p.section-vacancy__item-title Менеджер по рекламациям
 					span.section-vacancy__item-button Подробнее
 			// Vacancy
-			a.section-vacancy__item.show-more__mobile-hide(href="#")
+			a.section-vacancy__item(href="#")
 				.section-vacancy__item-row
 					p.section-vacancy__item-city
 						+svg("map-marker-small", true)(class="section-vacancy__item-city-marker")
@@ -126,7 +126,7 @@ block content
 					p.section-vacancy__item-title Менеджер по рекламациям
 					span.section-vacancy__item-button Подробнее
 			// Vacancy
-			a.section-vacancy__item.show-more__mobile-hide(href="#")
+			a.section-vacancy__item(href="#")
 				.section-vacancy__item-row
 					p.section-vacancy__item-city
 						+svg("map-marker-small", true)(class="section-vacancy__item-city-marker")
@@ -136,7 +136,7 @@ block content
 					p.section-vacancy__item-title Менеджер по рекламациям
 					span.section-vacancy__item-button Подробнее
 			// Vacancy
-			a.section-vacancy__item.show-more__mobile-hide(href="#")
+			a.section-vacancy__item(href="#")
 				.section-vacancy__item-row
 					p.section-vacancy__item-city
 						+svg("map-marker-small", true)(class="section-vacancy__item-city-marker")
@@ -145,4 +145,4 @@ block content
 				.section-vacancy__item-row
 					p.section-vacancy__item-title Менеджер по рекламациям
 					span.section-vacancy__item-button Подробнее
-		button.button.button--outline-blue.button--md.show-more__button.hide-desktop Показать еще
+		button.button.button--outline-blue.button--md.section-vacancy__show-more-btn Показать еще
