--- a/src/scss/components/sections/_section-vacancy.scss
+++ b/src/scss/components/sections/_section-vacancy.scss
@@ -154,4 +154,10 @@
 		height: 24px;
 		margin-right: 8px;
 	}
+
+	&__show-more-btn {
+		display: block;
+		max-width: 248px;
+		margin: 45px auto 0;
+	}
 }
