--- a/src/service-list.pug
+++ b/src/service-list.pug
@@ -18,7 +18,7 @@ block content
 	section.section-service-list.container
 		h1.h1.text-blue.section-service-list__title Услуги
 		p.section-service-list__description Предоставляем полный спектр складских услуг для Вашего бизнеса
-		.section-service-list__grid.show-more
+		.section-service-list__grid
 			// Card
 			a.section-service-list__card.card.card--with-icon.card--small-radius(href="#")
 				img.card__icon(src="images/section-service-list/icon1.svg")
@@ -48,7 +48,7 @@ block content
 				.card__bg-box
 					img.card__bg(src="images/section-service-list/bg9.jpg", alt)
 			// Card
-			a.section-service-list__card.card.card--with-icon.card--small-radius.show-more__mobile-hide(href="#")
+			a.section-service-list__card.card.card--with-icon.card--small-radius(href="#")
 				img.card__icon(src="images/section-service-list/icon4.svg")
 				.card__title-box
 					p.card__title Фулфилмент
@@ -56,7 +56,7 @@ block content
 				.card__bg-box
 					img.card__bg(src="images/section-service-list/bg10.jpg", alt)
 			// Card
-			a.section-service-list__card.card.card--with-icon.card--small-radius.show-more__mobile-hide(href="#")
+			a.section-service-list__card.card.card--with-icon.card--small-radius(href="#")
 				img.card__icon(src="images/section-service-list/icon5.svg")
 				.card__title-box
 					p.card__title Маркировка
@@ -66,7 +66,7 @@ block content
 				.card__bg-box
 					img.card__bg(src="images/section-service-list/bg11.jpg", alt)
 			// Card
-			a.section-service-list__card.card.card--with-icon.card--small-radius.show-more__mobile-hide(href="#")
+			a.section-service-list__card.card.card--with-icon.card--small-radius(href="#")
 				img.card__icon(src="images/section-service-list/icon6.svg")
 				.card__title-box
 					p.card__title Работа с
@@ -76,6 +76,6 @@ block content
 				.card__bg-box
 					img.card__bg(src="images/section-service-list/bg12.jpg", alt)
 		.section-service-list__button-row
-			button.button.button--outline-blue.button--md.section-service-list__button.show-more__button Показать еще
+			button.button.button--outline-blue.button--md.section-service-list__button Показать еще
 
 
